fixed alignment on item list

--- a/react-flask-app/src/CSS_Files/ItemInfo.css
+++ b/react-flask-app/src/CSS_Files/ItemInfo.css
@@ -32,7 +32,3 @@ input[type="number"] {
     text-align: center;
     background-color: #20dbc2;
 }
-
-p{
-    text-align: center;
-}
