--- a/react-flask-app/src/CSS_Files/itemstyle.css
+++ b/react-flask-app/src/CSS_Files/itemstyle.css
@@ -6,6 +6,7 @@
 }
 .item img{
     width:200px;
+    margin-left: 10px;
 }
 .item p{
     font-size: 20px;
@@ -16,3 +17,4 @@
     margin: 10px;
     color: blue;
 }
+
